# st_slam

./: .gitignore
datasets/rgbd_dataset_freiburg1_desk/: associations.txt
st_slam/: CMakeLists.txt
st_slam/apps/: CMakeLists.txt  dataset_reader.cpp  dataset_reader.h  st_slam_main.cpp
st_slam/include/st_slam/backend/: l_scov.h  loop_closer.h  loop_detector.h  pose_graph.h  spectral_heat_kernel.h
st_slam/include/st_slam/core/: config.h  math_utils.h  types.h
st_slam/include/st_slam/frontend/: a_csg.h  frame.h  local_map.h  ncio.h  orb_extractor.h  pnp_solver.h  st_nsp.h  t_pvd.h  tracking.h
st_slam/include/st_slam/midend/: deformation_field.h  tdq_bs.h  vb_ks.h  voxel_grid.h
st_slam/include/st_slam/perception/: local_costmap.h  pose_interpolator.h  topological_graph.h
st_slam/include/st_slam/system/: h_mbt.h  slam_benchmark.h  spsc_queue.h  thread_pool.h
st_slam/scripts/: colab_st_slam5_complete.py  evaluate_accuracy.py  evaluate_embodied_nav.py  habitat_colab_setup.py  habitat_experiment.py  intent_controller.py  metrics_report.txt  run_and_parse.py  setup_colab.sh  superpoint_infer.py  test_deadlock_defense.py  validate_defense.py
st_slam/src/backend/: l_scov.cpp  loop_closer.cpp  loop_detector.cpp  pose_graph.cpp  spectral_heat_kernel.cpp
st_slam/src/bridge/: py_st_slam.cpp
st_slam/src/core/: math_utils.cpp
st_slam/src/frontend/: a_csg.cpp  frame.cpp  local_map.cpp  ncio.cpp  orb_extractor.cpp  pnp_solver.cpp  st_nsp.cpp  t_pvd.cpp  tracking.cpp
st_slam/src/midend/: deformation_field.cpp  tdq_bs.cpp  vb_ks.cpp  voxel_grid.cpp
st_slam/src/perception/: local_costmap.cpp  pose_interpolator.cpp  topological_graph.cpp
st_slam/src/system/: h_mbt.cpp  thread_pool.cpp
st_slam/tests/: CMakeLists.txt  pgo_pose_sync_test.cpp  tcw_twc_test.cpp  test_initialization.cpp  test_loop_edge_preserve.cpp  test_pose_graph.cpp  test_pose_graph_debug.cpp
